Webspark Content Callout 7.x-1.6, 2017-03-03
------------------------------
- Removed Webspark Seven admin theme JS and moved it to that theme's folder.

Webspark Content Callout 7.x-1.5-dev, 2015-2-20
------------------------------
- Added show/hideon the media input fields on content callouts add form
- Disabled preview

Webspark Content Callout 7.x-1.4-dev, 2015-2-5
------------------------------
- Added help text to video upload fields.

Webspark Content Callout 7.x-1.3-dev, 2014-12-17
------------------------------
- Removing two of the example callouts.  One was a duplicate.  The second, the callout with the image, was removed because the image prevented replacing the files directory through the Pantheon dashboard while importing a site.

Webspark Content Callout 7.x-1.2-dev, 2014-11-21
------------------------------
- Adding config settings for Features UUID export settings to export four example content callouts with text, image and video.