@@ -2,7 +2,7 @@ name = Webspark Content Callout
 description = Callout boxes of text with images or video to call attention to special content or reinforce branding.
 core = 7.x
 package = ASU Webspark
-version = 7.x-1.6
+version = 7.x-1.7
 project = webspark_content_callout
 dependencies[] = ctools
 dependencies[] = defaultconfig
